2008-7-30 Dave Glowacki

* miscellaneous small changes to reaction manager.cpp for output file printing  
* updated all baselines
* changed QA.bat to include acetyl + O2 test system 

2008-7-27 Struan Robertson

  * Mesmer.vcproj updated to account for the deletion of SuperMolecule.cpp.

2008-7-27 Struan Robertson

  * Molecule.h, ClassicalRoror.cpp: Public data changed to protected.

2008-7-27 Struan Robertson

  * Molecule.h etc.: Removal of SuperMolecules and minor baseline updates.

2008-7-26 Struan Robertson

  * ClassicalRotor.cpp/.h, MesmerILT.cpp: Further rationalization of SuperMolecules.

2008-7-26 Struan Robertson

  * Baseline update following fixes in version 192.

2008-7-26 Struan Robertson

  * AssociationReaction.cpp: Found bug in equilibrium constant of association reaction which was using SuperMolecule. Altered to use
individual reactant partition functions and reinstated code rolled
back earlier.

2008-7-26 Struan Robertson

  * Winding back other changes to fix broken HOSO test.

2008-7-26 Struan Robertson

  * ReactionManager.cpp: Temporary fix for broken HOSO test.

2008-7-25 Struan Robertson

  * Removed broken header file references from Mesmer project file.

_2008_07_14__13_22_07_ Chi-Hsiu Liang

  * Updated baselines using Version 179

Chi-Hsiu Liang

  * Altered  if(nologging) flag in oberror.cpp
  * Corrected the initialization (new) and destruction of m_pSystemCollisionOperator. This causes Mesmer to crash after hundreds
    of calculations.
  * rr[i] = to_double(rrProxy[i]); =>  rr[i] = rrProxy[i];

2008-7-13 Struan Robertson

  * MesmerILT.h/.cpp : Altered so that the convolved density of states is calculated by explicit invocation and not via the modelled molecule route. This is possible because this method can only be used in conjunction with MesmerILT. This allows the removal of some SuperMolecule references in ClassicalRotor.cpp.

2008-07-06 Chris Morley

  * src/main: Documentation of mesmer output streams
  