@@ -1082,6 +1082,10 @@ Print time dependent species and product profiles
          79432.8        0.411556        0.588977         1.00053     -0.00053334
 }
 
+Bartis Widom eigenvalue/eigenvector analysis
+
+Number of sinks in this system: 0
+
 Z_matrix * Z_matrix^(-1):
 {
             1 -3.4694e-018
@@ -1094,11 +1098,11 @@ Kr:
   1.1275e-005 -3.2727e-007
 }
 
-First order and psuedo first order rate coefficients:
+First order & psuedo first order rate coefficients for loss & isomerization rxns:
 {
 n-pentyl loss = -1.12649e-005
 2-pentyl loss = -3.27266e-007
-n-pentyl -> 2-pentyl =  1.12751e-005
-2-pentyl -> n-pentyl =  3.2697e-007
+n-pentyl -> 2-pentyl = 1.12751e-005
+2-pentyl -> n-pentyl = 3.2697e-007
 }
 }
